package oo.proto;
option optimize_for = SPEED;
option java_package = "oo.proto";

message proxy_pkg{
	required string from = 1;
	required string to = 2;
	required string pkg_type = 3;
	required string pkg_body = 4;
}